--- a/main/templates/base.html.j2
+++ b/main/templates/base.html.j2
@@ -2,3 +2,4 @@
 
 <title>{% block title %}{% endblock %}</title>
 <header>{% block header %}{% endblock %}</header>
+<body>{% block body %}{% endblock %}</body>
